@@ -6,6 +6,10 @@
 //========================================
 
 03/20/2010
+	r266 [pakpil]
+	* Fixed GC_WEAPONBLOCKING that wasn't consuming SP while active.
+	* Fixed some damage formulas.
+
 	r265 [pakpil]
 	* Fixed an issue that was crashing server. Bug report 281.
 
